fix to add horizontal scrolling to wide comments with unwrappable text

--- a/src/components/Comment/Comment.css
+++ b/src/components/Comment/Comment.css
@@ -16,6 +16,10 @@
   margin-right: 1em;
 }
 
+.comment__text {
+  overflow: auto;
+}
+
 .comment__toggle {
   /* text-decoration: underline; */
   cursor: pointer;
